update image url

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
 
     <div id="gallery">
-        <a href="/img/img1.jpeg">
-            <img src="/img/img1.jpeg"/>
+        <a href="https://i.ibb.co/RgJY0TZ/img1.jpg">
+            <img src="https://i.ibb.co/RgJY0TZ/img1.jpg"/>
         </a>
-        <a href="/img/img2.jpg">
-            <img src="/img/img2.jpg"/>
+        <a href="https://i.ibb.co/VWvvCBM/img2.jpg">
+            <img src="https://i.ibb.co/VWvvCBM/img2.jpg"/>
         </a>
-        <a href="/img/img3.jpg">
-            <img src="/img/img3.jpg"/>
+        <a href="https://i.ibb.co/HTHjSjx/img3.jpg">
+            <img src="https://i.ibb.co/HTHjSjx/img3.jpg"/>
         </a>
-        <a href="/img/img4.jpg">
-            <img src="/img/img4.jpg"/>
+        <a href="https://i.ibb.co/2d38RXv/img4.jpg">
+            <img src="https://i.ibb.co/2d38RXv/img4.jpg"/>
         </a>
-        <a href="/img/img5.jpg">
-            <img src="/img/img5.jpg"/>
+        <a href="https://i.ibb.co/BnwVQhk/img5.jpg">
+            <img src="https://i.ibb.co/BnwVQhk/img5.jpg"/>
         </a>
-        <a href="/img/img6.jpg">
-            <img src="/img/img6.jpg"/>
+        <a href="https://i.ibb.co/hx65GpH/img6.jpg">
+            <img src="https://i.ibb.co/hx65GpH/img6.jpg"/>
         </a>
     </div>
     
